Pagina Sobre e correção de alguns bugs